--- a/rap.tex
+++ b/rap.tex
@@ -42,7 +42,7 @@
 \title{Fast Fourier transforms}
 \course{Numerical Methods in Physics}
 \email{tolu0022@student.umu.se}
-%\bottomtext{Extracting Information from a Noisy Signal}
+\bottomtext{FNM15\#d!DNUz\#\textbackslash0}
 
 \begin{document}
 \maketitle
@@ -56,37 +56,102 @@
 \clearpage
 
 \section{Introduction}
-This lab is about extracting information from a noisy signal.
-One can think of the signal as something that one would get from
-recording an amplitude modulated (AM) radio-signal that carried binary information.
-We say that the noisy signal consist of two parts, pure signal and noise.
-This makes sense in all cases where a signal is represented by some measurable
-physical entity The $2^{nd}$ law of thermodynamics tells us that the
-probability of increased entropy (could be interpreted as disorder or ``noise'') is very high.
+This lab is about extracting binary information from a noisy amplitude modulated (AM) signal.
+The signal is generated uniquely for each student and is given as a column vector
+in an ASCII-encoded data-file. 
 
-The pure signal has only one frequency, we call that the information-carrying
-frequency $\nu_0$. Since the information is binary, the pure signal
-takes on one of two different amplitudes, call them $a_{high}$ and $a_{low}$.
-One period with high amplitude in the pure signal encodes a 1, one period with
-low amplitude encodes a 0.
+In the next section, we present some brief theory behind discrete Fourier Transforms
+and how they can be of help when we want to filter out noise from a signal.
+We also present a brief description of the Gauss filter that we are going to use
+once the signal is transformed.
 
-The signal is given as a discrete column vector and is generated uniquely for each student.
-The column vector itself is given in as lines in an ASCII-encoded file.
-In the next section, we present the theory behind how FFT-techniques can be used to decode such a noisy signal.
-Then, in \ref{sec:code}, we present the tools we are going to use to implement the theory as
-procedures expressed as a computer program that can be compiled and executed.
-Figures and tables discussing <insert issues mentioned in spec here> is
-included in \ref{sec:results}.
+Then, in \ref{sec:code}, we present how to implement the theory as
+a computer program that can be compiled and executed.
+Figures and tables discussing choice of Gauss filter-bandwidth and method for automated
+bit pattern recognition is included in \ref{sec:results}.
+
+\section{Theory}
+We say that the signal is a superposition of two signals; the pure signal and the noise.
+The pure signal consist of a handful of frequencies, with
+the most prevalent (largest amplitude) of them being a so called ``carrying frequency'',
+$f_c$, and two ``modulating frequencies'' or ``side bands'', $f_c\pm\Delta f/2$.
+Together, they make the pure signal look like
+a series of wave packets with equal length, that take on one of two
+different amplitudes per period.
+
+These two amplitudes are what sepparates the ``1''s in the signal from the ``0''s,
+so finding the wave packets and their amplitude is the key to finding the
+information hidden in the signal.
+
+The noise is simple white noise, a signal with no particular periodicity but lots of frequencies.
+The noise is as strong as the pure signal, but randomly distributed, so the wave packets
+are impossible to see with the naked eye. We want to remove the noise from the signal
+with a filter.
+
+\subsection{Discrete Fourier Transform}
+The Fourier Theorem states that every periodic signal can be decomposed into
+a series of sines and cosines with different frequencies and coefficients (amplitudes).
+Since the distribution of these coefficients (the frequency distribution)
+is dramatically different in our pure signal and in the noise,
+we would like to do decompose our raw signal into such a series so that we can
+investigate and change the coefficients.
+
+A transformation that extracts the coefficients from a signal, $h(t)$ ``amplitude per time'',
+is called a Fourier Transform. Since our signal is discrete, we use a Discrete Fourier
+Transform:
+\begin{equation}\label{eq:ft}
+  H_n = \sum_{k=0}^{N-1} h_ke^{2\pi ikn/N},
+\end{equation}
+where $h_k$ is our discrete signal in time, $N$ is the number of samples we have and
+$H_n$ is the amplitude of the $n'th$ frequency in the signal.
+
+The problem of removing the noise can now be expressed as
+``finding the $f_c$ and the side bands and making their coefficients
+dominate all the others''. This operation is called filtering, and is
+described in section \ref{sec:gauss}.
+
+When filtering is done,
+we still need to reconstruct the time-dependent pure signal, $p_k$,
+from our new set of
+coefficients, $P_n$, in order to see the wave packets.
+This reconstruction is called
+an Inverse Fourier Transform, and its discrete version can be defined like:
+\begin{equation}\label{eq:ift}
+  p_k = \frac1N\sum_{i=0}^{N-1}P_ne^{-2\pi ikn/N}.
+\end{equation}
 
 
-\section{Theory}\label{sec:code}
-% give equations that program solves
+\subsection{The Gaussian Filter}\label{sec:gauss}
+This section will be about getting from $H_n$ in \eqref{eq:ft}
+to approximately $p_k$ in \eqref{eq:ift}.
+% HERE....
+In our case, we want to multiply $G$ and $H$ before inverse transforming,
+giving the expression
+\begin{align}
+  (g*h)_k &= \frac1N\sum_{i=0}^{N-1}G_n(\sum_{k=0}^{N-1} h_ke^{2\pi ikn/N})e^{-2\pi ikn/N}\\
+          &= \frac1N\sum_{i=0}^{N-1}(GH)_ne^{-2\pi ikn/N},
+\end{align}
+where $(g*h)_k$ is the frequency-filtered version of signal $h_k$ and $g$
+is the inverse Fourier Transform of $H$.
 
-\section{Code}
+This process is called ``filtering'', and we denote the
+filtered coefficients like $(GH)_n$ here.%\footnote{Note that $*$ means convolution, not multiplication. More on that in Section \ref{sec:gauss}.}
+That is, we simply multiply all coefficients $H_n$ with
+$G$, a function of frequency that is low over the
+frequencies we want to filter out.
+
+When $G_n$ is a Gauss curve, this whole operation on $h_k$ is called ``Gaussian filtering''.
+By centering the Gauss curve above the 
+
+It is not strictly needed for 
+
+
+
+\section{Code}\label{sec:code}
 % describe software, abstract point of view
 % describe external functions used
 
-\subsection{Numerical methods}
+\subsection{Numerical methods}\label{sec:nm}
 % give short overview of Cooley-Turk FFT algorithm here
 % link equations in Theory to the written code
 
@@ -97,6 +162,80 @@ included in \ref{sec:results}.
 % figures, tables, explanatory text
 % answer questions posed in introduction
 % make sure all issues mentioned in spec are discussed
+
+
+\begin{figure}
+  \begin{small}
+  \centering
+  \input{different_filters.tex}
+  \caption{
+    Visualizations of Gaussian filters with different bandwidths
+    along with the the resulting signals after using them (expressed
+    in absolute values).
+    The frequencies are on the $x$-axis and the top left plot shows the
+    the \emph{unfiltered} version of what is filtered in the three other plots.
+    Notice that the highest frequencies are cut out of this plot since
+    all filters zero them out anyways.
+    Also note that negative frequencies not shown in this plot, they would
+    look mirrored across the $y$-axis if they were included.
+    We see that a bandwidth of $\unit[64]{Hz}$ lets almost only the carrying frequency
+    through, and damps the modular frequencies down to amplitudes of the white
+    noise. The filter with $\Delta f = \unit[128]{Hz}$ supresses a lot of noise,
+    but also damps out ca $\unit[50]{\%}$ of the modular frequencies 
+    (those at $\unit[896]{Hz}$ and $\unit[1152]{Hz}$).
+    The filter with
+    $\Delta f = \unit[256]{Hz}$ also supresses most of the noise-frequencies
+    and damps the modular frequencies with only about $\unit[15]{\%}$.
+    Plots of the signals after they've been filtered and transformed back
+    to the time domain is found in Figure \ref{fig:different_bandwidths}.
+    Since the filter is implemented programmatically, it would have been easy to
+    write a filter that simply picked the information carrying frequencies.
+  }
+  \label{fig:different_filters}
+  \end{small}
+\end{figure}
+
+\begin{figure}
+  \begin{small}
+  \centering
+  \input{different_bandwidths.tex}
+  \caption{
+    The first byte of the AM-modulated binary data after transforming,
+    filtering and inverse transforming. $\Delta f$ denotes the bandwidth
+    the Gauss filter that has been used (see Figure \ref{fig:different_filters}).
+    We see that a filter with a too narrow bandwidth, in this case $\Delta f = \unit[64]{Hz}$,
+    makes overall amplitude low, and bytes look blurred/smeared out.
+    A too wide bandwidth, in this case $\Delta f = \unit[512]{Hz}$ ,allows
+    the noise to disturb the signal making it look somewhat irregular.
+  }
+  \label{fig:different_bandwidths}
+  \end{small}
+\end{figure}
+
+\begin{figure}
+  \begin{small}
+  \centering
+  \input{filtered_with_bandwidth_256.tex}
+  \caption{The first tenth of the signal, filtered with a Gaussian
+    filter using bandwidth
+    $\Delta f = \unit[256]{Hz}$ and $f_c = \unit[1024]{Hz}$.
+    Notice that time units are assumed to be such that the carrier wave
+    get frequency $\unit[1024]{Hz}$ and the modulation frequency
+    is $\unit[8/1024]{Hz}$.
+    We se clearly the two types of
+    wave packets that decode the binary information.
+    The wave packets with amplitudes
+    around $0.8$ can be interpreted as ``0''s
+    and the ones with amplitudes around $2.4$ can be interpreted as ``1''s.
+    The first eight bits in this pattern is then the binary number $01000110$.
+    In decimal this is $70$ and interpreted as a
+    ASCII-decoded letter, this is an \textit{F}.
+  }
+  \label{fig:filtered_with_bandwidth_256}
+  \end{small}
+\end{figure}
+
+
 
 \section{Conclusions}
 % validity of results?
