--- a/rap.tex
+++ b/rap.tex
@@ -74,7 +74,7 @@ bit pattern recognition is included in \ref{sec:results}.
 We say that the signal is a superposition of two signals; the pure signal and the noise.
 The pure signal consist of a handful of frequencies, with
 the most prevalent (largest amplitude) of them being a so called ``carrying frequency'',
-$f_c$, and two ``modulating frequencies'' or ``side bands'', $f_c\pm\Delta f/2$.
+$f_c$, and two modulating frequencies/side bands, $f_c\pm\Delta f/2$.
 Together, they make the pure signal look like
 a series of wave packets with equal length, that take on one of two
 different amplitudes per period.
@@ -88,7 +88,7 @@ The noise is as strong as the pure signal, but randomly distributed, so the wave
 are impossible to see with the naked eye. We want to remove the noise from the signal
 with a filter.
 
-\subsection{Discrete Fourier Transform}
+\subsection{Discrete Fourier Transform}\label{sec:ft}
 The Fourier Theorem states that every periodic signal can be decomposed into
 a series of sines and cosines with different frequencies and corresponding coefficients (Fourier coefficients).
 Since the values of these coefficients% (the frequency distribution)
@@ -104,66 +104,144 @@ Transform:
 \end{equation}
 where $h_k$ is our discrete signal in time, $N$ is the number of samples we have and
 $H_n$ is the amplitude of the $n$'th frequency in the signal.
+Note the $i$ on the RHS that makes $H_n$ a complex valued function in general.
+Note also that for purely real $h_k$, the transformed data satisfy the symmetry
+\begin{equation}\label{eq:symmetry}
+  H_{n-k} = H_k^*,
+\end{equation}
+where $^*$ means the complex conjugate.
+Lastly, note that half of the frequency domain that $H_n$ is defined on
+consist of negative frequencies.\footnote{Negative frequencies is a
+consequence of the transform definition \eqref{eq:ft} containing complex numbers.
+These negative frequences are no more
+mystical than the fact that a list of recorded samples can be traversed both
+forwards and backwards.}
 
-The problem of removing the noise can now be expressed as:
-\begin{itemize}
-  \item Extract the Fourier coefficients of the signal
-  \item Find the coefficient that corresponds to $f_c$ and the side bands
-  \item Make them dominate all other coefficients
-  \item Reconstruct the (approximately pure) signal
-\end{itemize}
+It turns out that the inverse problem, that of extracting time dependent
+amplitudes from frequency dependent amplitudes is solved with a very
+similar transform, called the Inverse Fourier Transform:
 
-Finding the carrying frequency (or equivalently its coefficient) will be
-an optimization problem. We simply assume that the largest coefficient
-correspond to $f_c$. If not, our Fourier Trasform-based method won't work.
-
-Making the coefficient of $f_c$ dominate all others is a filtering problem.
-We simply multiply the found series of coefficients, $H$, with a function
-$G(f)$ that has a maxima in $f_c$.
-
-Reconstructing the time-dependent pure signal, $p_k$,
-from our new set of
-coefficients, $P_n$, is needed in order to see the wave packets.
-This reconstruction is called
-an Inverse Fourier Transform, and its discrete version can be defined like:
 \begin{equation}\label{eq:ift}
   p_k = \frac1N\sum_{i=0}^{N-1}P_ne^{-2\pi ikn/N}.
 \end{equation}
 
+The problem of removing the noise can now be expressed as:
+\begin{itemize}
+  \item Extract the Fourier coefficients, $H(f_n)$, of the signal with a Fourier Transform
+  \item Find the coefficient that corresponds to $f_c$ and the side bands
+  \item Make them dominate all other coefficients
+  \item Reconstruct the (now approximately pure) signal with an Inverse Fourier Transform
+\end{itemize}
+
+Finding the carrying frequency (or equivalently its coefficient) will be
+an optimization problem. We simply assume that the largest coefficient
+correspond to $f_c$. If this is not the case, our simple Fourier Trasform-based
+method won't work.
 
 \subsection{The Gaussian Filter}\label{sec:gauss}
-This section will be about getting from $H_n$ in \eqref{eq:ft}
-to approximately $p_k$ in \eqref{eq:ift}.
-% HERE....
-In our case, we want to multiply $G$ and $H$ before inverse transforming,
-giving the expression
+Making the coefficient of $f_c$ dominate all others is a filtering problem.
+We simply multiply the found series of coefficients, $H_n$, with a function
+$G(f)$ (or its discretized version $G_n = G(f_n)$) that has a maximum in $f_c$.
+We denote the filtered coefficients $(GH)_n$.
+Note that since \eqref{eq:ft} contains complex numbers, $H_n$ will be defined
+for negative frequencies as well as positive ones, so $G$ must be mirrored
+around the $y$-axis in order to scale all frequencies.\footnote{The symmetric
+  property \eqref{eq:symmetry} in the frequency domain is equivalent
+  to having $h(t)\in\R$ in the time domain. Failing to maintain symmetry
+  after frequency-filtering makes the signal complex (and noisy) in the time domain.}
+
+This process of multiplying all elements in a series by a function
+is called filtering, and when $G(f)$ is a Gaussian curve we
+call it Gaussian filtering, hence the section title.
+Since the filtering is done with a frequency-dependent function, $G(f)$,
+we call it frequency-filtering.
+
+The filter function actually used in this lab is
+\begin{equation}\label{eq:filter_fct}
+  G(f) = e^{-\frac12\left(\frac{|f| - f_c}{\Delta f} \right)^2}
+\end{equation}
+
+Taking the Inverse Fourier Transform of a Gauss-filtered signal gives us
 \begin{align}
   (g*h)_k &= \frac1N\sum_{i=0}^{N-1}G_n(\sum_{k=0}^{N-1} h_ke^{2\pi ikn/N})e^{-2\pi ikn/N}\\
           &= \frac1N\sum_{i=0}^{N-1}(GH)_ne^{-2\pi ikn/N},
 \end{align}
-where $(g*h)_k$ is the frequency-filtered version of signal $h_k$ and $g$
-is the inverse Fourier Transform of $H$.
+where $(g*h)_k$ is the frequency-filtered and hopefully approximately pure version of
+the signal $h_k$, and $g$ is the inverse Fourier Transform of the Gaussian $G$.
 
-This process is called ``filtering'', and we denote the
-filtered coefficients like $(GH)_n$ here.%\footnote{Note that $*$ means convolution, not multiplication. More on that in Section \ref{sec:gauss}.}
-That is, we simply multiply all coefficients $H_n$ with
-$G$, a function of frequency that is low over the
-frequencies we want to filter out.
+There are some details to this that are not strictly needed for understanding this
+lab, but they're quite interesting anyways. 
 
-When $G_n$ is a Gauss curve, this whole operation on $h_k$ is called ``Gaussian filtering''.
-By centering the Gauss curve above the 
+For example, we have the notation $g*h$.
+The $*$ is an operator called a convolution and its
+discrete version is defined like this:
+\begin{equation}\label{eq:convolution}
+  (g*h)_n = \sum_{m=-\infty}^{\infty} g_m h_{(n-m)}.
+\end{equation}
 
-It is not strictly needed for 
+It is not entirely obvious from \eqref{eq:convolution}, \eqref{eq:ft} and \eqref{eq:ift} that
+the three operations of Fourier Transforming, filtering and Inverse transforming is equivalent
+to convolution, but this is indeed the case. This is called the Convolution Theorem, and
+a proof can be found at \cite{convolution_theorem}.
 
+Further it might not be obvious from \eqref{eq:ift} that the Inverse Fourier Transform of a
+Gaussian curve is also a Gaussian curve, but this is the case for all Gaussian curves.
+if we let $\mathcal{F}$ denote  a Fourier Transform we have the following relation
+\[
+  \mathcal{F}\left[e^{-ax^2} \right](k) = \sqrt{\frac{\pi}{a}} e^{-\pi^2k^2/a}.
+\]
 
+This suggests that we could have achieved the frequency-filtering with $G$ in just two steps,
+instead of the four listed in Section \ref{sec:ft}:
+\begin{itemize}
+  \item Computing the Gaussian $g=\mathcal{F}^{-1}[G]$ (cheap)
+  \item Computing the convolution $(g*h)_n$
+\end{itemize}
 
 \section{Code}\label{sec:code}
 % describe software, abstract point of view
 % describe external functions used
+The code is written in C and goes through roughly the following steps:
+\begin{itemize}
+  \item Read data into array while counting samples
+  \item Fourier transform the data
+  \item Filter the data
+  \item Inverse Fourier transform the data
+  \item Construct bytes from data
+  \item Interpret bytes as ASCII-characters
+  \item Print ASCII-characters to screen
+\end{itemize}
+
+Two functions from the \Gsl library are used to do the Fourier and Inverse
+Fourier transformations, namely \texttt{gsl\_fft\_complex\_radix2\_forward}
+and \texttt{gsl\_fft\_complex\_radix2\_inverse}.
+They don't work for data lengths that are not a power of 2,
+they take complex values as input and leave the data shifted, so extra care is
+taken when indexing frequency domain data.
+Even though they are not the fastest Fourier transforming functions available,
+they are ``simple and compact''\cite{gsl_doc}.
 
 \subsection{Numerical methods}\label{sec:nm}
 % give short overview of Cooley-Turk FFT algorithm here
 % link equations in Theory to the written code
+The reason for the quirks in the \texttt{gsl\_fft\_complex\_radix2\_...}
+functions is that they use the (in-place) Cooley-Tukey algorithm without sorting.
+
+The Cooley-Tukey algorithm is the classical way to implement a Fourier Transform,
+since it is fairly intuitive, was discovered early\footnote{actually multiple times \cite{cooley_tukey}}
+and it needs only \ordo{N\log{N}} operations (compared to $N^2$ operations needed to
+compute \eqref{eq:ft} explicitly).
+
+In fact \texttt{gsl\_fft\_complex\_radix2\_...} don't really satisfy \eqref{eq:ft} and \eqref{eq:ift}
+because the in-place Cooley-Tukey without sorting shifts the indices
+so that the leftmost half is swapped with the rightmost (positive frequencies
+starting at $f=0$ is placed at the beginning of the array in stead of at the middle).
+This shift is reversed on each application of Cooley-Tukey, so omitting explicit
+sorting saves some clock cycles for us.
+
+The filtering with \eqref{eq:filter_fct} is performed with a simple for-loop
+and the constants $f_c = 1024$ and $\Delta f = 256$ found by from visually
+inspecting the transformed data.
 
 \subsection{Program}
 % how to compile and use program
@@ -255,6 +333,24 @@ It is not strictly needed for
 
 \clearpage
 \begin{thebibliography}{99}
+
+\bibitem{convolution_theorem}
+  Wikipedia\\
+  \emph{Convolution Theorem}\\
+  \url{https://en.wikipedia.org/wiki/Convolution_theorem}\\
+  Datum: 3 -- 2 -- 2015
+
+\bibitem{gsl_doc}
+  GNU Scientific Library\\
+  \emph{Reference Manual: Radix-2 FFT routines for complex data}\\
+  \url{https://www.gnu.org/software/gsl/manual/html_node/Radix_002d2-FFT-routines-for-complex-data.html}\\
+  Datum: 3 -- 2 -- 2015
+
+\bibitem{cooley_tukey}
+  Wikipedia\\
+  \emph{Cooley–Tukey FFT algorithm}\\
+  \url{https://en.wikipedia.org/wiki/Cooley–Tukey_FFT_algorithm}
+  Datum: 3 -- 2 -- 2015
 
 %\bibitem{sampl}
 %  W. H. Press, S. A. Teukolsky, W. T. Vetterling, and
